update chinese translation

--- a/src/go/package/lang/cn.json
+++ b/src/go/package/lang/cn.json
@@ -2,17 +2,17 @@
   "required": {
     "package_id": "PackageID 不能为空",
     "user_id": "UserID 不能为空",
-    "name": "名称是必需的",
-    "url": "URL 是必需的"
+    "name": "名称不能为空",
+    "url": "URL 不能为空"
   },
   "not_exist": {
     "package": "包不存在"
   },
   "max": {
-    "name": "名称必须少于 :max",
-    "summary": "摘要必须少于 :max",
-    "url": "URL 必须少于 :max",
-    "tags": "您只能添加 :max 个标签",
-    "description": "描述必须少于 :max"
+    "name": "名称长度必须小于 :max",
+    "summary": "摘要长度必须小于 :max",
+    "url": "URL 长度必须小于 :max",
+    "tags": "最多添加 :max 个标签",
+    "description": "描述长度必须小于 :max"
   }
 }
