add translation for validation

--- a/src/go/user/lang/cn.json
+++ b/src/go/user/lang/cn.json
@@ -17,7 +17,14 @@
     "email": "邮箱格式错误",
     "password": {
       "error": "密码错误",
-      "min": "密码长度不能小于6位"
+      "min": "密码长度不能小于6位",
+      "max": "密码长度不能大于:max位"
+    },
+    "summery": {
+      "max": "简介长度不能大于:max位"
+    },
+    "name": {
+      "max": "用户名长度不能大于:max位"
     }
   },
   "exist": {
