--- a/src/go/package/lang/cn.json
+++ b/src/go/package/lang/cn.json
@@ -4,7 +4,11 @@
     "user_id": "UserID 不能为空",
     "name": "名称不能为空",
     "url": "URL 不能为空",
-    "id": "ID 不能为空"
+    "id": "ID 不能为空",
+    "last_updated_at": "LastUpdatedAt 不能为空"
+  },
+  "invalid": {
+    "last_updated_at": "LastUpdatedAt 格式错误"
   },
   "not_exist": {
     "package": "包不存在"
