--- a/src/go/package/lang/en.json
+++ b/src/go/package/lang/en.json
@@ -4,7 +4,11 @@
     "package_id": "PackageID is required",
     "name": "Name is required",
     "url": "URL is required",
-    "id": "ID is required"
+    "id": "ID is required",
+    "last_updated_at": "LastUpdatedAt is required"
+  },
+  "invalid": {
+      "last_updated_at": "LastUpdatedAt is invalid"
   },
   "not_exist": {
     "package": "Package not found"
