--- a/src/go/package/lang/cn.json
+++ b/src/go/package/lang/cn.json
@@ -6,6 +6,9 @@
     "url": "URL 不能为空",
     "id": "ID 不能为空"
   },
+  "invalid": {
+    "last_updated_at": "LastUpdatedAt 格式错误"
+  },
   "not_exist": {
     "package": "包不存在"
   },
