--- a/src/go/package/lang/en.json
+++ b/src/go/package/lang/en.json
@@ -6,6 +6,9 @@
     "url": "URL is required",
     "id": "ID is required"
   },
+  "invalid": {
+      "last_updated_at": "LastUpdatedAt is invalid"
+  },
   "not_exist": {
     "package": "Package not found"
   },
